@@ -7,11 +7,9 @@ Needed For Fist Stable Release
 -------------------------
 *Code
 - implement SNPP "HOLD" function
-- implement net/mask checking for SNPP client connections
+- pre-expand all the SNPP ACLs
 - implement a list of addresses for SNPP server to listen on (for multihomed)
 - write up an example CGI script for sending pages
-- fix fail-notify setting to be PC-aware
-- fix tempfail-notify-after setting to be PC-aware
 *Docs
 - finish sendpage-manual
 
@@ -24,6 +22,7 @@ Needed For Next Stable Release
 - implement "dialretries" (attempt dialing again for PC)
 - implement character-based translation tables
 - create more fallback PC config options (temp-fail, etc)
+- create an option to allow for SNPP session debugging
 
 
 Would Be Nice
